--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-numpy==1.20.2
-scipy==1.6.2
+numpy==1.26.4
+scipy==1.12.0
 # backports.strenum; python_version < '3.10'
 
 # dev
 
-imageio==2.9.0
-mypy==0.812
-flake8==3.9.0
-black==20.8.b1
-pytest==6.2.3
-setuptools-scm==6.0.1
-setuptools==56.0.0
-wheel==0.36.2
-pdoc3==0.9.2
-pytest-benchmark==3.2.3
+imageio==2.34.0
+mypy==1.9.0
+ruff==0.3.2
+pytest==8.1.1
+setuptools-scm==8.0.4
+setuptools==69.1.1
+wheel==0.42.0
+pdoc3==0.10.0
+pytest-benchmark==4.0.0
